objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Default sales process</fullName>
        <description>The CIB Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Client Engaged</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Contracts Finalised</fullName>
        </values>
        <values>
            <fullName>Credit Case Submitted</fullName>
        </values>
        <values>
            <fullName>Credit Sanctions Obtained</fullName>
        </values>
        <values>
            <fullName>In Implementation %2F Conditions Precedent</fullName>
        </values>
        <values>
            <fullName>Initial Solution Proposed</fullName>
        </values>
        <values>
            <fullName>Mandate Won</fullName>
        </values>
        <values>
            <fullName>Needs Established</fullName>
        </values>
        <values>
            <fullName>Opportunity Identified</fullName>
        </values>
        <values>
            <fullName>Pricing Finalised</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Wealth Sales Process</fullName>
        <description>The Wealth Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Accepted</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Identified</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Presentation</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Acc_Banker_Deal_Team_Transaction_cleared__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Before proceeding confirm that the Accountable Banker, the Deal Team and the Transaction have been cleared</inlineHelpText>
        <label>Acc Banker/Deal Team/Transaction cleared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Lock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is being use for a trigger on Private Side deals. when the banker aren&apos;t included on the Deal Team this field will populate with the original Relationship Name.</description>
        <label>Original Relationship Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities (Account)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Accountable_Banker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Ensure that the drop down list to the left of the field has &quot;User&quot; as the value.</inlineHelpText>
        <label>Accountable Banker</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annualised_Income_Wealth__c</fullName>
        <description>Wealth - Total income as a result of calculations of Deal Value, Upfront fees  and Ongoing Fees.</description>
        <formula>Amount  *  Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Annualised Income</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annualised_Income__c</fullName>
        <label>Annualised Income</label>
        <summarizedField>OpportunityLineItem.Annualised_Income__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Asset_Hub_1a__c</fullName>
        <label>Asset Hub 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Hub_1perc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Asset Hub 1 %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Asset_Hub_2__c</fullName>
        <label>Asset Hub 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Congo (DRC)</fullName>
                </value>
                <value>
                    <fullName>Cote d’Ivoire</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>Gabon</fullName>
                </value>
                <value>
                    <fullName>Ghana</fullName>
                </value>
                <value>
                    <fullName>Kenya</fullName>
                </value>
                <value>
                    <fullName>Mauritius Offshore</fullName>
                </value>
                <value>
                    <fullName>Mauritius Onshore</fullName>
                </value>
                <value>
                    <fullName>Mozambique</fullName>
                </value>
                <value>
                    <fullName>Namibia</fullName>
                </value>
                <value>
                    <fullName>Nigeria</fullName>
                </value>
                <value>
                    <fullName>Rwanda</fullName>
                </value>
                <value>
                    <fullName>Senegal</fullName>
                </value>
                <value>
                    <fullName>Seychelles</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>Tanzania BBT</fullName>
                </value>
                <value>
                    <fullName>Tanzania NBC</fullName>
                </value>
                <value>
                    <fullName>Togo</fullName>
                </value>
                <value>
                    <fullName>Uganda</fullName>
                </value>
                <value>
                    <fullName>Zambia</fullName>
                </value>
                <value>
                    <fullName>Zimbabwe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Hub_2perc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Asset Hub 2 %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Asset_Hub_3__c</fullName>
        <label>Asset Hub 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Congo (DRC)</fullName>
                </value>
                <value>
                    <fullName>Cote d’Ivoire</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>Gabon</fullName>
                </value>
                <value>
                    <fullName>Ghana</fullName>
                </value>
                <value>
                    <fullName>Kenya</fullName>
                </value>
                <value>
                    <fullName>Mauritius Offshore</fullName>
                </value>
                <value>
                    <fullName>Mauritius Onshore</fullName>
                </value>
                <value>
                    <fullName>Mozambique</fullName>
                </value>
                <value>
                    <fullName>Namibia</fullName>
                </value>
                <value>
                    <fullName>Nigeria</fullName>
                </value>
                <value>
                    <fullName>Rwanda</fullName>
                </value>
                <value>
                    <fullName>Senegal</fullName>
                </value>
                <value>
                    <fullName>Seychelles</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>Tanzania BBT</fullName>
                </value>
                <value>
                    <fullName>Tanzania NBC</fullName>
                </value>
                <value>
                    <fullName>Togo</fullName>
                </value>
                <value>
                    <fullName>Uganda</fullName>
                </value>
                <value>
                    <fullName>Zambia</fullName>
                </value>
                <value>
                    <fullName>Zimbabwe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Hub_3perc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Asset Hub 3 %</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Attachment_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Attachment Count</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BBE_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BEE Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BB_CIB_user__c</fullName>
        <description>To distinguish user types in Sharing rules</description>
        <inlineHelpText>This field is auto-updated by a workflow rule called Owner Role is CIB or BB</inlineHelpText>
        <label>BB or CIB user</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CIB User</fullName>
                </value>
                <value>
                    <fullName>BB User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BIC_F__c</fullName>
        <description>BIC Code and Description, if available,  from associated Relationship.</description>
        <formula>IF (ISNULL(Account.BIC_Code__c), &apos;&apos;, IF (ISNULL(Account.BIC_Description__c), Account.BIC_Code__c, Account.BIC_Code__c &amp; &apos; - &apos; &amp;  Account.BIC_Description__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BIC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIB_Referral__c</fullName>
        <description>Wealth - Was this Opportunity referred from CIB</description>
        <label>CIB Referral</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CPFAccountNumber__c</fullName>
        <label>CPF Account Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSM_Initiator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSM Initiator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CSM_Initiator</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call Report</label>
        <referenceTo>Call_Report__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_SafeID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case SafeID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Plan_Strategy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Plan Strategy</label>
        <referenceTo>Client_Plan_Strategy__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Date_YTD__c</fullName>
        <formula>IF( (Today() - DATE(
IF(Today() &lt; DATE( YEAR( TODAY() ) ,01,01),
YEAR( TODAY() ) -1,
YEAR( TODAY() )
),01,01)) &gt;= (CloseDate - DATE( (IF( CloseDate &lt; DATE( YEAR( CloseDate ) ,01,01),
YEAR( CloseDate ) -1,
YEAR( CloseDate ) )
),01,01)) ,
1,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Date - YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_via_Visual_Workflow__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to determine whether an opportunity is closed through the visual workflow. It is set through the Close Opportunity Flow.</description>
        <label>Closed via Visual Workflow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Connected_to_RFP_Tender__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Connected to RFP / Tender</description>
        <inlineHelpText>Indicate if the opportunity is connected to a Tender / RFP</inlineHelpText>
        <label>Connected to RFP / Tender</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <formula>Relationship_Contact__r.Phone</formula>
        <label>Contact Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_Booking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country of Booking 1</label>
        <referenceTo>Coverage_Country__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_of_booking_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country of Booking 2</label>
        <referenceTo>Coverage_Country__c</referenceTo>
        <relationshipLabel>Opportunities (Country of booking 2)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Creator_Business_Area__c</fullName>
        <formula>TEXT (CreatedBy.Business_Area__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creator Business Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_Country__c</fullName>
        <formula>CreatedBy.Country</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creator Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_Hub__c</fullName>
        <formula>TEXT(CreatedBy.Hub__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creator Hub</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creator_Team__c</fullName>
        <formula>TEXT (CreatedBy.Team__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Creator Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CrossSellOpportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether this opportunity was created through a trigger through the cross sell process.</description>
        <label>Cross Sell Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Remaining__c</fullName>
        <description>Wealth - Used to calculate the number of days remaining in the Year. Used in the annualised income field</description>
        <formula>DATEVALUE(TEXT(YEAR(Today())) + &quot;-12-31&quot;) - CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Stage_Change__c</fullName>
        <formula>TODAY()  -  Last_Stage_Change_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Stage Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_since_expected_Close_date__c</fullName>
        <description>SFA-348</description>
        <formula>TODAY() -  CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since expected Close date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Ticket_Number__c</fullName>
        <label>Deal Ticket Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETA_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ETA Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Proposal_Submission_date__c</fullName>
        <label>Estimated Proposal Submission date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_Amount_2__c</fullName>
        <formula>Amount  *  Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fee_Amount__c</fullName>
        <description>Wealth - Upfront fee amount</description>
        <label>Upfront Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Drawdown_Amount__c</fullName>
        <description>This field gets updated should it come from Oberon to the drawdown amount of the related drawdown thats associated with the minimum date</description>
        <label>First Drawdown Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Drawdown_Manual__c</fullName>
        <description>This is a manual field which is updated with the minimum drawdown date and associated amount should the Opportunity be created by Oberon. For any other instance these fields won&apos;t be updated.</description>
        <label>First Drawdown</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Drawdown__c</fullName>
        <label>First Drawdown</label>
        <summarizedField>Drawdowns__c.Drawdown_date__c</summarizedField>
        <summaryForeignKey>Drawdowns__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GF_Region2__c</fullName>
        <formula>CASE(Opportunity_Country__c , 
&quot;Angola&quot;,&quot;Southern and Central Africa&quot;,
&quot;Botswana&quot;,&quot;Southern and Central Africa&quot;,
&quot;Cameroon&quot;,&quot;Southern and Central Africa&quot;,
&quot;Central African Republic&quot;,&quot;Southern and Central Africa&quot;,
&quot;Chad&quot;,&quot;Southern and Central Africa&quot;,
&quot;Congo (DRC)&quot;,&quot;Southern and Central Africa&quot;,
&quot;Equatorial Guinea&quot;,&quot;Southern and Central Africa&quot;,
&quot;Gabon&quot;,&quot;Southern and Central Africa&quot;,
&quot;Lesotho&quot;,&quot;Southern and Central Africa&quot;,
&quot;Namibia&quot;,&quot;Southern and Central Africa&quot;,
&quot;Republic of the Congo&quot;,&quot;West Africa&quot;,
&quot;São Tomé and Príncipe&quot;,&quot;Southern and Central Africa&quot;,
&quot;South Africa&quot;,&quot;Southern and Central Africa&quot;,
&quot;Swaziland&quot;,&quot;Southern and Central Africa&quot;,
&quot;Burundi&quot;,&quot;East Africa&quot;,
&quot;Comoros&quot;,&quot;East Africa&quot;,
&quot;Djibouti&quot;,&quot;East Africa&quot;,
&quot;Eritrea&quot;,&quot;East Africa&quot;,
&quot;Ethiopia&quot;,&quot;East Africa&quot;,
&quot;Kenya&quot;,&quot;East Africa&quot;,
&quot;Madagascar&quot;,&quot;Southern and Central Africa&quot;,
&quot;Malawi&quot;,&quot;Southern and Central Africa&quot;,
&quot;Mauritius&quot;,&quot;Southern and Central Africa&quot;,
&quot;Mozambique&quot;,&quot;Southern and Central Africa&quot;,
&quot;Réunion&quot;,&quot;Southern and Central Africa&quot;,
&quot;Reunion&quot;,&quot;Southern and Central Africa&quot;,
&quot;Rwanda&quot;,&quot;East Africa&quot;,
&quot;Seychelles&quot;,&quot;Southern and Central Africa&quot;,
&quot;Somalia&quot;,&quot;East Africa&quot;,
&quot;Tanzania&quot;,&quot;East Africa&quot;,
&quot;Uganda&quot;,&quot;East Africa&quot;,
&quot;Zambia&quot;,&quot;East Africa&quot;,
&quot;Zimbabwe&quot;,&quot;Southern and Central Africa&quot;,
&quot;Algeria&quot;,&quot;North Africa&quot;,
&quot;Egypt&quot;,&quot;North Africa&quot;,
&quot;Libya&quot;,&quot;North Africa&quot;,
&quot;Morocco&quot;,&quot;North Africa&quot;,
&quot;Sudan&quot;,&quot;North Africa&quot;,
&quot;Tunisia&quot;,&quot;North Africa&quot;,
&quot;Western Sahara&quot;,&quot;North Africa&quot;,
&quot;Benin&quot;,&quot;West Africa&quot;,
&quot;Burkina Faso&quot;,&quot;West Africa&quot;,
&quot;Cape Verde&quot;,&quot;West Africa&quot;,
&quot;Cote d’Ivoire&quot;,&quot;West Africa&quot;,
&quot;Ghana&quot;,&quot;West Africa&quot;,
&quot;Guinea&quot;,&quot;West Africa&quot;,
&quot;Guinea-Bissau&quot;,&quot;West Africa&quot;,
&quot;Liberia&quot;,&quot;West Africa&quot;,
&quot;Mali&quot;,&quot;West Africa&quot;,
&quot;Mauritania&quot;,&quot;West Africa&quot;,
&quot;Niger&quot;,&quot;West Africa&quot;,
&quot;Nigeria&quot;,&quot;West Africa&quot;,
&quot;Saint Helena&quot;,&quot;West Africa&quot;,
&quot;Senegal&quot;,&quot;West Africa&quot;,
&quot;Sierra Leone&quot;,&quot;West Africa&quot;,
&quot;The Gambia&quot;,&quot;West Africa&quot;,
&quot;Togo&quot;,&quot;West Africa&quot;
	, 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GF Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HiddenJSFixName__c</fullName>
        <defaultValue>&quot;&lt;script&gt;console.log(&apos;stuff&apos;)&lt;/script&gt;&quot;</defaultValue>
        <label>HiddenJSFixName</label>
        <length>131070</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Highest_Annual_Income_Product_Name__c</fullName>
        <label>Highest Annual Income Product Name</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Income_this_Year__c</fullName>
        <label>Income this Year</label>
        <summarizedField>OpportunityLineItem.Income_this_Year__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <description>Used to store the Industry of the associated account so sharing rules can use it.</description>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Parent_Opportunity__c</fullName>
        <label>Is Parent Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JLOC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>JLOC</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Only JLOC from current Organisation can be selected.</errorMessage>
            <filterItems>
                <field>JLOC__c.Organisation__c</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>JLOC__c.Organisation__c</field>
                <operation>equals</operation>
                <valueField>$Source.Account_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>JLOC__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Stage_Change_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Last Stage Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loss_Win_Description__c</fullName>
        <label>Loss/Win Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mandate_Won_date__c</fullName>
        <label>Mandate Won date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <description>Wealth - Ongoing fee percentage of Deal Value</description>
        <label>Ongoing Fee (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Name_of_CIB_Referrer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Wealth - The name of the CIB user who referred the opporuntity</description>
        <inlineHelpText>Name of the referrer of the opportunity</inlineHelpText>
        <label>Name of CIB Referrer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Id</field>
                <operation>equals</operation>
                <value>00e1p000001Afgp</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Net_Facility_Balance_all_Products__c</fullName>
        <label>Net Facility Balance all Products</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Action_Date__c</fullName>
        <description>Date of next planned action</description>
        <inlineHelpText>Enter the date of the next action planned</inlineHelpText>
        <label>Next Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_of_days_past_close_date__c</fullName>
        <description>Field set to 1 if the opportunity closed date has lapsed. This field is used for reporting.</description>
        <formula>IF( TODAY() &gt;  CloseDate , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No of days past close date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notify_ABSA_Insurance_Of_This_Deal__c</fullName>
        <label>Notify ABSA Insurance Of This Deal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Age_in_days__c</fullName>
        <formula>if(if(IsClosed, CloseDate,today())-datevalue(CreatedDate)&lt;0, 0,if(IsClosed, CloseDate,today())-datevalue(CreatedDate))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Age (in days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Country__c</fullName>
        <description>Used in Process Flow:  Update GF Region based on Opp Country</description>
        <label>Opportunity Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Cabo Verde</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Central African Republic (CAR)</fullName>
                </value>
                <value>
                    <fullName>Chad</fullName>
                </value>
                <value>
                    <fullName>Comoros</fullName>
                </value>
                <value>
                    <fullName>Congo (DRC)</fullName>
                </value>
                <value>
                    <fullName>Cote d’Ivoire</fullName>
                </value>
                <value>
                    <fullName>Djibouti</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>Equatorial Guinea</fullName>
                </value>
                <value>
                    <fullName>Eritrea</fullName>
                </value>
                <value>
                    <fullName>Ethiopia</fullName>
                </value>
                <value>
                    <fullName>Gabon</fullName>
                </value>
                <value>
                    <fullName>Gambia</fullName>
                </value>
                <value>
                    <fullName>Ghana</fullName>
                </value>
                <value>
                    <fullName>Guinea</fullName>
                </value>
                <value>
                    <fullName>Guinea-Bissau</fullName>
                </value>
                <value>
                    <fullName>Kenya</fullName>
                </value>
                <value>
                    <fullName>Lesotho</fullName>
                </value>
                <value>
                    <fullName>Liberia</fullName>
                </value>
                <value>
                    <fullName>Libya</fullName>
                </value>
                <value>
                    <fullName>Madagascar</fullName>
                </value>
                <value>
                    <fullName>Malawi</fullName>
                </value>
                <value>
                    <fullName>Mali</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Deal_Value__c</fullName>
        <description>Rolled up value of Annualised Income on all related Products</description>
        <inlineHelpText>Rolled up value of Annualised Income on all related Products</inlineHelpText>
        <label>Opportunity Deal Value</label>
        <summarizedField>OpportunityLineItem.Annualised_Income__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>